--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "sequelize": "^4.2.1",
+    "sqlite3": "^3.1.8",
     "underscore": "^1.8.3"
   }
 }
