--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-api",
   "version": "1.0.0",
   "description": "A todo list api",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -10,6 +10,7 @@
   "author": "trevDev",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "pg": "^6.4.0",
